--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ CacheControl==0.12.10
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
+dj-database-url==0.5.0
 Django==3.2.9
+django-heroku==0.0.0
 djangorestframework==3.12.4
 firebase-admin==5.1.0
 google-api-core==2.2.2
@@ -37,3 +39,4 @@ six==1.16.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.7
+whitenoise==5.3.0
